--- a/styles.css
+++ b/styles.css
@@ -1,65 +1,85 @@
-body {
+* {
   margin: 0;
-  font-family: sans-serif;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.header {
-  background-color: #29335c;
-  color: white;
-  padding: 20px;
+body {
+  font-family: Arial, sans-serif;
+  background-color: #ffff;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
+  height: 100vh;
 }
-
-.content {
-  background-color: white;
-  padding: 50px;
+img{
+  border-radius: 500px;
+  width: 200px;
+  height: 200px;
+}
+.container {
   display: flex;
-  justify-content: space-between;
+  width: 100%;
+  background-color:#ffff;
+  overflow: hidden;
 }
 
-.left {
-  width: 50%;
-  margin-right: 50px;
+/* Dividindo os containers */
+.left-container, .right-container {
+  flex: 1;
 }
 
-.right {
-  width: 30%;
+.left-section {
+  background-color: #e5e5e5;
   display: flex;
-  flex-direction: column;
+  justify-content: center;
   align-items: center;
-}
-
-.right div {
-  background-color: #29335c;
-  width: 100px;
-  height: 100px;
-  border-radius: 50%;
-  margin-bottom: 20px;
-}
-
-.title {
-  font-size: 36px;
-  font-weight: bold;
-  margin-bottom: 20px;
-}
-
-.description {
-  font-size: 16px;
-  line-height: 1.5;
-}
-
-.footer {
-  background-color: #29335c;
-  color: white;
   padding: 20px;
-  text-align: center;
+  width: 800px;
+  height: 500px;
+  border-top-right-radius: 400px;
+  border-bottom-right-radius: 400px;
+  
+}
+
+.left-section img {
+  max-width: 90%;
+  height: auto;
+  
+}
+
+.right-section {
+  padding: 40px;
+  background-color: #ffffff;
+  color: white;
+  
 }
 
 .circle {
-  background-color: #e0e0e0;
-  width: 200px;
-  height: 200px;
+  width: 130px;
+  height: 130px;
+ justify-content: space-between;
+  background-color: #0f2941;
   border-radius: 50%;
+}
+ 
+
+
+.right-section h2 {
+  margin-bottom: 20px;
+  font-size: 2em;
+}
+
+
+
+a {
+  color: white;
+  text-decoration: none;
+  margin-bottom: 20px;
+  font-size: 0.9em;
+  text-align: right;
+}
+
+a:hover {
+  text-decoration: underline;
 }
