--- a/styles.css
+++ b/styles.css
@@ -30,15 +30,17 @@ img{
 }
 
 .left-section {
-  background-color: #e5e5e5;
+  background-color: #0f2941;
+  color: #ffffff;
   display: flex;
   justify-content: center;
   align-items: center;
   padding: 20px;
-  width: 800px;
+  width: 1000px;
   height: 500px;
   border-top-right-radius: 400px;
   border-bottom-right-radius: 400px;
+  margin-top: 120px;
   
 }
 
@@ -50,17 +52,22 @@ img{
 
 .right-section {
   padding: 40px;
+  padding-left: 100px;
   background-color: #ffffff;
   color: white;
+
   
 }
 
 .circle {
-  width: 130px;
-  height: 130px;
+  width: 200px;
+  height: 200px;
  justify-content: space-between;
   background-color: #0f2941;
   border-radius: 50%;
+  margin-top: 15px;
+  margin-left: 90px;
+ 
 }
  
 
