--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,11 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+ 
+}
+
+::-webkit-scrollbar {
+  display: none;
 }
 
 body {
@@ -17,11 +22,14 @@ img{
   width: 200px;
   height: 200px;
 }
+
 .container {
   display: flex;
   width: 100%;
   background-color:#ffff;
-  overflow: hidden;
+  margin-left: -1536px;
+  margin-top: 290px;
+ 
 }
 
 /* Dividindo os containers */
@@ -89,4 +97,33 @@ a {
 
 a:hover {
   text-decoration: underline;
+}
+
+
+header.cabecalho {
+  width: 100%;
+  background-color: #0f2941;
+  padding: 10px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: -665px;
+}
+
+header .logo {
+  width: 100px;
+  height: auto;
+}
+
+.return-btn {
+  color: #ffffff;
+  background-color: #ff6600;
+  padding: 10px 20px;
+  border-radius: 5px;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+.return-btn:hover {
+  background-color: #e65c00;
 }
